syntax="proto3";
package admin;
option go_package="./pkg/admin/pb";
service AuthService{
    rpc Login(AdminLoginRequest) returns (AdminLoginResponse) {}
    rpc Validate(ValidateRequest) returns (ValidateResponse) {}
}


//Login

message AdminLoginRequest{
    string email=1;
    string password=2;
}
message AdminLoginResponse{
    int64 status=1;
    string error=2;
    string token=3;
}

//Validate

message ValidateRequest{string token = 1;}

message ValidateResponse{
    int64 status=1;
    string error=2;
    int64 userId=3;
}
